Changelog
=========

2.1.1 - Unreleased
------------------

2.1 - 2011-01-03
----------------

* Use plone.uuid to look up content UUIDs.
  [toutpt, davisagli]

* Added example of how to use ordered extenders and browser layer aware
  extenders.
  [miohtama]

2.0.3 - 2010-07-07
------------------

* Added back the ``caching.zcml`` file, but have it load ``configure.zcml``.
  This makes it easier to write Plone 3 / 4 compatible code.
  [hannosch]

* Factored out the condition to disable the cache during tests into a module
  global variable called ``CACHE_ENABLED``.
  [hannosch]

2.0.2 - 2010-06-13
------------------

* Changed the schema cache again, to use the id() only as a fallback when there
  is not yet an UID assigned. The id() is unstable with Acquisition wrappers
  and ZODB level ghosting of objects. We provide an explicit API for disabling
  the cache instead.
  [hannosch]

* Avoid deprecation warnings under Zope 2.13.
  [hannosch]

* Change the schema cache key to avoid an issue during content migration when
  there might be two objects that have the same UID but different schemata.
  Now concatenating the Python id() with the UID (id() alone isn't good enough,
  as two objects with non-overlapping lifetimes may have the same id() value).
  Fixes http://dev.plone.org/plone/ticket/10637.
  [davisagli]

2.0.1 - 2010-05-23
------------------

* Disable the schema cache during test runs.
  [hannosch]

2.0 - 2010-05-23
----------------

* Removed the ``caching.zcml`` and enabled caching by default. You can use
  a different caching implementation by using an ``overrides.zcml`` file.
  [hannosch]

* Added ``z3c.autoinclude`` entry point to mark this as a Plone plugin.
  [hannosch]

1.6 - 2010-03-22
----------------

* Fix index accessor to support setting custom accessor methods.
  [witsch]

1.5 - 2009-11-18
----------------

* Fixed test failure in usage.txt.
  [hannosch]

* Standardized package metadata layout.
  [hannosch]

1.4 - 2009-11-05
----------------
